update start command